Task : Modified basic website

--- a/About us.html
+++ b/About us.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <nav style="background-color: grey; text-align: right;"><h2>
-        <a style="color: gainsboro;" a href="http://127.0.0.1:5500/html/Home.html#">Home</a>&emsp;&emsp;
-        <a style="color: gainsboro;" href="http://127.0.0.1:5500/html/Contact%20us.html">Contact Us</a>&emsp;&emsp;
+        <a style="color: gainsboro;" a href="Home.html">Home</a>&emsp;&emsp;
+        <a style="color: gainsboro;" href="Contact us.html">Contact Us</a>&emsp;&emsp;
     </h2></nav>
     <h1 style="color:palevioletred ;">About Corporate World</h1>
 
