--- a/Contact us.html
+++ b/Contact us.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <nav style="background-color:grey; text-align: right;"><h2> 
-        <a style="color:gainsboro;" href="http://127.0.0.1:5500/html/Home.html#">Home</a>&emsp;&emsp;
-        <a style="color:gainsboro;" href="http://127.0.0.1:5500/html/About%20us.html#">About Us</a>&emsp;&emsp;
+        <a style="color:gainsboro;" href="Home.html">Home</a>&emsp;&emsp;
+        <a style="color:gainsboro;" href="About us.html">About Us</a>&emsp;&emsp;
     </h2>  </nav>
     
     <h1 style="color: darkolivegreen;">Send me a message</h1>
