Task : update home file with index.html

--- a/About us.html
+++ b/About us.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav style="background-color: grey; text-align: right;"><h2>
-        <a style="color: gainsboro;" a href="Home.html">Home</a>&emsp;&emsp;
+        <a style="color: gainsboro;" a href="index.html">Home</a>&emsp;&emsp;
         <a style="color: gainsboro;" href="Contact us.html">Contact Us</a>&emsp;&emsp;
     </h2></nav>
     <h1 style="color:palevioletred ;">About Corporate World</h1>
