--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         <nav style="background-color: grey; text-align: right;"><h2>
         
-            <a style="color: gainsboro;" href="Home.html">Home</a>&emsp;&emsp;
+            <a style="color: gainsboro;" href="index.html">Home</a>&emsp;&emsp;
             <a style="color:gainsboro;" href="About us.html">About</a>&emsp;&emsp;
             <a style="color: gainsboro;" href="Contact us.html">Contact Us</a>&emsp;&emsp;
 
