--- a/Contact us.html
+++ b/Contact us.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav style="background-color:grey; text-align: right;"><h2> 
-        <a style="color:gainsboro;" href="Home.html">Home</a>&emsp;&emsp;
+        <a style="color:gainsboro;" href="index.html">Home</a>&emsp;&emsp;
         <a style="color:gainsboro;" href="About us.html">About Us</a>&emsp;&emsp;
     </h2>  </nav>
     
