--- a/Contact us.html
+++ b/Contact us.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+      body{
+          background-color:whitesmoke;
+          text-align: center;
+      }
+      button {
+          color:yellow;
+      }
+  </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
 </head>
+
 <body>
     <nav style="background-color:grey; text-align: right;"><h2> 
         <a style="color:gainsboro;" href="index.html">Home</a>&emsp;&emsp;
@@ -21,7 +31,7 @@
         <label style="color:forestgreen;" for="fname">Last Name:</label><br>
         <input type="text" id="lname" name="lname" value=""><br><br>
 
-        <label style="color: forestgreen;";" for="gender">Gender:</label><br>
+        <label style="color: rgb(0, 0, 0);";" for="gender">Gender:</label><br>
         <input type="radio" id="male" name="gender" value="male">
         <label for="male">Male</label><br>
         <input type="radio" id="female" name="gender" value="female">
@@ -37,7 +47,8 @@
         <label style="color: forestgreen;" for="message">Message</label><br>
         <textarea rows="4" cols="50" name="comment" form="usrform">Enter text here...</textarea><br><br>
 
-        <button style="color: gray;" type="submit" form="form1" value="Submit">Submit</button>
+        <button style="color:teal;" type="submit" form="form1" value="Submit">Submit</button>
+
         </div>
     </form>
 
